--- a/kuelshammer-algebra1/mitschrift.tex
+++ b/kuelshammer-algebra1/mitschrift.tex
@@ -2219,6 +2219,711 @@ aber $3$.
   Bezeichnung: $\mu$ \addindex{Minimalpolynom} von $b$ über $K$.
 \end{bem}
 
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 7.2
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:7.2}
+  $L = \R, K = \Q, b = \sqrt{2} \Rightarrow \mu = X^2 - 2$. Beachte:
+  $\sqrt{2} \notin \Q$.
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.1
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.1}
+  Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch mit
+  Minimalpolynom $\mu$. Für $\varphi \in K[X]$ gilt dann:
+  \[\varphi(b) = 0 \Leftrightarrow \mu|\varphi\]
+  Insbesondere ist $\mu$ irreduzibel in $K[X]$.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+\begin{itemize}
+\item["`$\Rightarrow$"'] Sei $\varphi \in K[X]$ mit $\varphi(b) = 0$\\
+Schreibe $\delta := ggT\left(\varphi, \mu\right) = \alpha\varphi + \beta\mu$ mit $\alpha, \beta \in K[X]$.\\
+Dann: $\delta(b) = \alpha(b)\underbrace{\varphi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
+Nach Wahl von $\mu$ ist $\deg{(\delta)} = \deg{(\mu)}$.\\
+Da $\delta$, $\mu$ normiert mit $\delta|\mu$ sind, folgt $\mu = \delta|\varphi$.\\
+\item["`$\Leftarrow$"'] Sei $\mu|\varphi$, d.h. $\varphi = \mu\nu \ \left(\nu \in K[X]\right)$.\\
+Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.\\
+\end{itemize}
+Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.\\
+Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \randbem{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, o.B.d.A. $\alpha(b) = 0$.\\
+Daher: $\mu|\alpha \ \mu$, d.h. $\alpha = a\mu$ für ein $a \in K \backslash \left\{0\right\}$.\\
+Dies zeigt: $\mu$ irreduzibel.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 7.2
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:7.2}
+Sei $L|K$ eine Körpererweiterung, und seien $b_1, \ldots, b_n \in L$. Mit $K\left(b_1, \ldots, b_n\right)$ bezeichnen wir den Durchschnitt aller Teilkörper von $L$, die $K$ und $b_1, \ldots, b_n$ enthalten.\\
+Nach \autoref{bsp:6.2}(b) ist $K\left(b_1, \ldots, b_n\right)$ ein Teilkörper von $L$. Man sagt, dass es durch Adjunktion\footnote{"`hinzunehmen"'} von $b_1, \ldots, b_n$ zu $K$ entsteht.\\
+Man zeigt leicht:
+\begin{enumerate}[(i)]
+	\item $L\left(b_1, \ldots, b_n\right) = \left(K\left(b_1, \ldots, b_n\right)\right)\left(b_n\right)$
+	\item $K\left(b\right) = \left\{\frac{\varphi(b)}{\psi(b)} \colon \varphi, \psi \in K[X], \psi(b) \neq 0\right\}$ für $b \in L$.
+\end{enumerate}
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.2
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.2}
+Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit Minimalpolynom $\mu$ vom Grad $n$. Dann ist die Abbildung \[f \colon \underbrace{K[X]|(\mu)}_{\text{Körper, weil }\mu \text{ irreduziebl}} \mapsto K(b), \ \varphi + (\mu) \mapsto \varphi(b)\] ein Körperisomorphismus; insbesondere ist $\left[K(b):K\right] = \deg{\mu} = n < \infty$, und \[K(b) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\}.\]
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+\underline{Wir zeigen:} f wohldefiniert.\\
+Dazu seien $\varphi, \psi \in K[X]$ mit $\varphi + (\mu) = \psi + (\mu)$.\\
+Dann: $\psi = \varphi + \alpha\mu$ mit $\alpha \in K[X]$.\\
+Folglich: $\psi(b) = \varphi(b) + \alpha(b)\mu(b) = \varphi(b)$. Also $f$ wohldefiniert.\\
+Wegen 
+\[\begin{array}{lcl}
+f\left(\left[\beta + \left(\mu\right)\right] \mystackrel{+}{\cdot} \left[\gamma + \left(\mu\right)\right]\right) & = & f\left(\beta \mystackrel{+}{\cdot} \gamma + \left(\mu\right)\right)\\
+& = & \left(\beta \mystackrel{+}{\cdot} \gamma\right)\left(b\right)\\
+& = & \beta(b) \mystackrel{+}{\cdot} \gamma(b)\\
+& = & f\left(\left[\beta + \left(\mu\right)\right]\right) \mystackrel{+}{\cdot} f\left(\left[\gamma + \left(\mu\right)\right]\right)
+\end{array}\] und $f(1) = 1$ ist $f$ ein Körperhomomorphismus.
+
+Wegen $K[X]/\mu = \left\{a_0 + a_1X + \ldots + a_{n-1}X^{n-1} + (\mu) \colon a_0, \ldots, a_{n-1} \in K\right\}$ ist $Bld(f) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
+Andererseits ist $Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $Bld(f) \subseteq K(b) \Rightarrow Bld(f) = K(b)$.\\
+Also ist $f$ Körperhomomorphismus.\\
+Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b):K\right] = \dim_k K(b) = \dim_k K[X] / (\mu) = \deg{\mu}\].
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 7.3
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:7.3}
+$L|K$ Körpererweiterung und $n := \left[L:K\right] < \infty$.\\
+Dann ist $L|K$ algebraisch; denn für $b \in L$ können die $n + 1$ Elemente $1, b, b^2, \ldots, b^n$ nicht linear unabhängig sein. Folglich existiert $a_0, a_1, \ldots, a_n \in K$, nicht alle gleich $0$, mit $a_0 + a_1b + \ldots + a_nb^n = 0$.\\
+Also: $\varphi := a_0 + a_1X + \ldots + a_nX^n \in K[X] \backslash \left\{0\right\}$ mit $\varphi(b) = 0$, d.h. $b$ algebraisch über $K$.\\
+Ist also $E$ ein endlicher Körper und $F \subseteq E$ Teilkörper, dann ist $E|F$ algebraisch.
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.3
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.3}
+Sei $L|K$ Körpererweiterung.\\
+\begin{enumerate}[(i)]
+	\item Sind $b_1, \ldots, b_n \in L$ algebraisch über $K$, so ist $K\left(b_1, \ldots, b_n\right)|K$ algebraisch.
+	\item Für jede weitere Körpererweiterung $M|L$ gilt: \[M|K \text{ algebraisch } \Leftrightarrow M|L, L|K \text{ algebraisch  \footnotesize(Transitivität)\normalsize}\] 
+	\item $F := \left\{b \in L \colon b \text{ algebraisch über K}\right\}$ ist ein Teilkörper von $L$ mit $K \subseteq F \subseteq L$
+\end{enumerate}
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Definition 7.2
+%%%%%%%%%%%%%%%%%%%
+\begin{defi}\label{defi:7.2}
+$F$ heißt \addindex{Algebraischer Abschluss} von $K$ in $L$.
+\end{defi}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+\begin{enumerate}[(i)]
+	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1):K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{\left(K\left(b_1\right)\right)\left(b_2\right)}_{= K\left(b_1, b_2\right)}:K\left(b_1\right)\right] < \infty\] Gradsatz: $\left[K\left(b_1, b_2\right):K\right] < \infty$. Induktiv folgt: \[\left[K\left(b_1, \ldots, b_n\right):K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K\left(b_1, \ldots, b_n\right)|K$ algebraisch.
+	\item \begin{itemize}
+	\item["`$\Rightarrow$"'] Sei $M|K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und daher ist auch $L|K$ algebraisch.\\
+	\item["`$\Leftarrow$"'] Seien $M|L$, $L|K$ algebraisch, und sei $c \in M$.\\
+	Dann exisitiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \ldots + b_1c + b_0 = 0$.\\
+	Daher ist $c$ algebraisch über $K\left(b_0, \ldots, b_{n-1}\right)$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{\left(K\left(b_0, \ldots, b_{n-1}\right)\right)\left(c\right)}_{= K\left(b_0, \ldots, b_{n-1}, c\right)}:K\left(b_0, \ldots, b_{n-1}\right)\right] < \infty\]
+	Nach dem Beweis von (i) ist $\left[K\left(b_0, \ldots, b_{n-1}\right):K\right] < \infty$.\\
+	Gradsatz: $\left[K\left(b_0, \ldots, b_{n-1}, c\right):K\right] < \infty$.\\
+	\autoref{bsp:7.3}: $K\left(b_0, \ldots, b_{n-1}, c\right)|K$ algebraisch; insbesondere $c$ algebraisch über $K$.
+	\item Nach \autoref{bsp:7.1} ist $K \subseteq F$; insbesondere sind $0, 1 \in F$. Seien $b, c \in F$.\\
+	Nach (i) ist $K\left(b, c\right)|K$ algebraisch; insbesondere $b \mystackrel{\pm}{\cdot} c \in K\left(b, c\right)$ algebraisch über $K$, also $b \mystackrel{\pm}{\cdot} c \in F$.\\
+	Analog $\frac{b}{c} \in F$, falls $c \neq 0$.\\
+	Daher: $F$ Teilkörper.
+	\end{itemize}
+\end{enumerate}
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 7.4
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:7.4}
+Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit Minimalpolynom $X^2 - 2$.\\
+Daher: $\left[\Q\left(\sqrt{2}\right):\Q\right] = \deg{\left(X^2 - 2\right)} = 2$.\\
+Sogar: $\Q\left(\sqrt{2}\right) = \left(a + b\sqrt{2} \colon a, b \in \Q\right)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{\left(a + b\sqrt{2}\right)\left(a - b\sqrt{2}\right)} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q\left(\sqrt{2}\right).\]
+Es ist $\sqrt{3} \notin \Q\left(\sqrt{2}\right)$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
+Koeffizientenvergleich \randbem{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3 \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.h. $a = 0$ oder $b = 0$.\\
+Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
+Daher ist $\sqrt{3}$ algebraisch über $\Q\left(\sqrt{2}\right)$ mit Minimalpolynom $X^2 - 3$.\\
+Folglich: $\left[\left(\Q\left(\sqrt{2}\right)\right)\left(\sqrt{3}\right):\Q\left(\sqrt{2}\right)\right] = \deg{\left(X^2 - 3\right)} = 4$.\\
+Gradsatz: $\left[\Q\left(\sqrt{2}, \sqrt{3}\right):\Q\right] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q\left(\sqrt{2}, \sqrt{3}\right)$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{2}$ über $\Q, \Q\left(\sqrt{2}, \sqrt{3}\right):\Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6} \ \Q$-Basis von $\Q\left(\sqrt{2}, \sqrt{3}\right)$.
+\[\left.\begin{array}{lcl}
+b^0 & = & 1\\
+b^1 & = & \sqrt{2} + \sqrt{3}\\
+b^2 & = & 5 + 2\sqrt{6}\\
+b^3 & = & 11\sqrt{2} + 9\sqrt{3}
+\end{array}\right\} \text{ linear unabhängig über }\Q\]
+\[\begin{array}{lcl}
+b^3 & = & 11\sqrt{2} + 9\sqrt{3} \\
+b^4 & = & 49 + 20\sqrt{6}
+\end{array}\]
+Wir suchen $a_0, a_1, a_2, a_3 \in \Q$ mit
+\[\begin{array}{lcl}
+0 & = & a_0 + a_1b + a_2b^2 + a_3b^3 + b^4\\
+& = & a_0 \cdot 1 + a_1 \left(\sqrt{2} + \sqrt{3}\right) + a_2 \left(5 + 2\sqrt{6}\right) + a_3 \left(11 + 9\sqrt{3}\right) + \left(49 + 20\sqrt{6}\right)\\
+& = & \underbrace{\left(a_0 + 5 \cdot a_2 + 49\right)}_{= 0} + \underbrace{\left(a_1 + 11a_3\right)}_{= 0}\sqrt{2} + \underbrace{\left(a_1 + 9a_3\right)}_{= 0}\sqrt{3} + \underbrace{\left(2a_2 + 20\right)}_{= 0}\sqrt{6}
+\end{array}\]
+Also: $a_2 = -10, a_0 = 1, a_1 = a_3 = 0$. Daher: $\mu = 1 - 10X^2 + X^4$.\\
+Folglich: $\left[\Q\left(\sqrt{2} + \sqrt{3}\right):\Q\right] = 4$ und $\Q\left(\sqrt{2}, \sqrt{3}\right) = \Q\left(\sqrt{2} + \sqrt{3}\right)$
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.4
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.4}
+Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ \left(p \in \PZ, n \in \N\right)$ und sei $F$ Teilkörper von $E$ (z.B.: der Primkörper von $E$).\\
+Dann ist $E \cong F[X] / (\varphi)$ für ein irreduzibles Polynom $\varphi \in F[X]$ mit $\varphi|X^{p^n} - X$.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Sei $b \in E$ mit $E = \left\{0, 1, v, b^2, \ldots, b^{p^n - 1}\right\}$ mit $b^{p^n - 1} = 1$.\\
+Das Minimalpolynom $b$ über $F$ ist irreduzibel in $F[X]$ und nach \autoref{satz:7.2} gilt: $E = F(b) \cong F[X]/(\mu)$.\\
+Wegen $b^{p^n} = b$ gilt: $\mu|X^{p^n} - X$. \randbem{Minimalpolynom teilt jedes Polynom, dass $b$ als Nullstelle hat.}
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 7.3
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:7.3}
+Sei $K$ ein Körper.\\
+Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[ggT\left(X^m-1, X^n-1\right) = X^{ggT(m, n)}-1.\] Mit Aufgabe 5 folgt daraus leicht: 
+\[ggT\left(X^{q^a}-X, X^{q^b}-X\right) = X^{ggT(a, b)}-X \ \ \left(a, b, q \in \N\right)\]
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.5
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.5}
+Sei $K$ ein endlicher Körper, $q := \left|K\right|$ und $n \in \N$.\\
+Dann:\randbem{Formel muss man wissen! Sehr wichtig für Theorie!} \[X^{q^n} - X = \prod_{\varphi \in K[X] \text{ irreduzibel}, \atop \deg{\varphi|n}}\varphi\]
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Sei $\varphi \in K[X]$ irreduzibel mit $d := \deg{\varphi|n}$.\\
+Dann ist $K[X] / \varphi$ ein Körper mit $q^d$ Elementen. Für $b := X + (\varphi)$ gilt dann: $b^{q^d} = b$, d.h. $0 = b^{q^d} - b = X^{q^d} - X + (\varphi)$.\\
+Folglich: $\varphi|X^{q^d} - X\stackrel{\autoref{bem:7.3}}{|}X^{q^n} - X$.\\
+Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi|X^{q^n} - X$ und $d := \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi|X^{q^d} - X$. Daher: $\varphi|ggT\left(X^{q^d} - X, X^n - X\right) = X^{q^{ggT(d, n)}} - X$, d.h. $X^{q^{ggT(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
+Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{ggT(d, n)}} - X$} $b^{q^{ggT(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{ggT(d, n)} \leq q^d$, d.h. $d = ggT(d, n)|n$.\\
+Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\varphi \in K[X]$ irreduzibel mit $\varphi^2|X^{q^n} - X$. Schreibe: $X^{q^n} - X = \varphi^2\varphi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
+\[\begin{array}{lcl}
+\underbrace{-1}_{\text{Grad }0} & = & \left(X^{q^n} - X\right)'\\
+& = & \left(\varphi^2\psi\right)' + \left(\varphi^2\right)'\psi\\
+& = & \varphi^2\psi' + 2\varphi\varphi'\psi\\
+& = & \underbrace{\varphi\left(\psi' + 2\varphi'\psi\right)}_{\text{Grad mindestens }\deg{\varphi}\text{ Widerspruch zu Grad }0}
+\end{array}\].
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 7.5
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:7.5}
+$\begin{array}[t]{ll}
+q = 2 \colon & X^4 - X = X\left(X - 1\right)\left(X^2 + X + 1\right)\\
+& X^8 - X = X\left(X - 1\right)\left(X^3 + X + 1\right)\left(X^3 + X^2 + 1\right)
+\end{array}$\randbem{Siehe \autoref{satz:7.5}}
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 7.4
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:7.4}
+Vergleich der Grade in \autoref{satz:7.5} liefert: $q^n := \sum\limits_{d|n}dI_d$, wobei $I_d$ die Anzahl der irreduziblen Polynome vom Grad $d$ in $K[X]$ bezeichnet. Möbius Inversion (\autoref{satz:3.4}) ergibt: 
+\[nI_n = \sum_{d|n}\mu(d)g^{\frac{n}{d}}\text{, d.h. } I_n = \frac{1}{n}\sum_{d|n}\mu(d)q^{\frac{n}{d}}.\]
+Bei festem $q$ und "`großem"' $n$ existieren also etwa $\frac{1}{n}q^n$ irreduzible Polynome vom Grad $n$ in $K[X]$. Da es insgesamt genau $q^n$ normierte Polynome vom Grad $n$ in $K[X]$ gibt, liegt die Wahrscheinlichkeit, dass ein zufällig ausgewähltes Polynom vom Grad $n$ in $K[X]$ irreduzibel ist, ungefähr bei $n$.\\
+Genauer: \randbem{$I_n$ kann nicht $= 0$ sein, daher gibt es immer irreduzible Polynome zu einem vorgegebenen Grad}
+$\begin{array}[t]{lcl}
+I_1 & = & q,\\ 
+I_2 & = & \frac{1}{2}\left(q^2 - q\right),\\
+I_3 & = & \frac{1}{3}\left(q^3 - q\right),\\
+I_4 & = & \frac{1}{4}\left(q^4 - q^2\right),\\
+I_5 & = & \frac{1}{5}\left(q^5 - q\right),\\
+I_4 & = & \frac{1}{6}\left(q^6 - q^3 - q^2 + q\right), \ldots
+\end{array}$
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.6
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.6}
+Zu jedem endlichen Körper $K$ und jedem $n \in \N$ existiert mindestens ein irreduzibles Polynom vom Grad $n$ in $K[X]$. Zu jedem $p \in \PZ$ und jedem $n \in \N$ exisitiert also ein Körper mit $p^n$ Elementen.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Anderenfalls währe mit dem obigen Bezeichnungen $I_n = 0$, d.h. $0 = \sum\limits_{d|n}\mu(d)q^{\frac{n}{d}}$. Diese Gleichung hat die Form 
+\[0 = \pm q^{k_1} \pm q^{k_2} \pm \ldots \pm q^{k_r} \text{ mit } k_1 < k_2 < \ldots < k_r\] Wir erhalten so den Widerspruch: $0 \equiv \pm q^{k_1} \pmod{\left(q^{k_2}\right)}$.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.7
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.7}
+Sei $K$ ein endlicher Körper, und seien $\varphi, \psi$ irreduzible Polynome vom gleichem Grad $n$ in $K[X]$. Dann: 
+\[K[X] / (\varphi) \cong K[X]/(\psi)\]
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Sei $\left|K\right| = q$, also $\left|K[X]/(\varphi)\right| = q^n = \left|K[X]/(\psi)\right|$. Nach \autoref{satz:7.5} ist $\varphi|X^{q^n} - X$, d.h. $X^{q^n} - X = \varphi\omega$ mit $\omega \in K[X]$. Jedes $b \in K[X]/(\varphi)$ erfüllt $b^{q^n} = b$, d.h. $0 = b^{q^n} - b = \varphi(b)\omega(b)$. Da $\omega$ höchstens $\deg{\omega} < q^n$ Nullstellen in $K[X]/(\psi)$ hat, existiert ein $b \in K[X]/(\psi)$ mit $\varphi(b) = 0$. Die Abbildung $f \colon K[X]/(\varphi) \mapsto K[X]/(\psi)$, $\alpha + (\varphi) \mapsto \alpha(b)$, ist wohldefiniert; denn sind $\alpha, \beta \in K[X]$ mit $\alpha + (\varphi) = \beta + (\varphi)$, so ist $\beta = \alpha + \tau\varphi$ für ein $\tau \in K[X]$, also $\beta(b) = \alpha(b) + \tau(b)\varphi(b) = \alpha(b)$. Man rechnet leicht nach, dass $f$ ein Körperhomomorphismus ist. Insbesondere ist $f$ injektiv, also auch surjektiv.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 7.5
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:7.5}
+Für $p \in \PZ$ und $n \in \N$ bezeichnet man den im wesentlich eindeutig bestimmten körper mit $p^n$ Elementen $\F{p^n}$, oder $GF(p^n)$ (\addindex{Galoisfeld}). Beachte: $\F_p \cong \ZmZ{p}$, $\F_{p^n} \not\cong \ZmZ{p^n}$ für $n > 1$.
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 7.6
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:7.6}
+$\left[\Q\left(\sqrt{2}\right):\Q\right] = 2\left[\Q\left(\sqrt{3}\right):\Q\right]$, aber $\underbrace{\Q\left(\sqrt{2}\right)}_{\text{hier Element mit }a^2 = 2} \not\cong \underbrace{\Q\left(\sqrt{3}\right)}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q\left(\sqrt{2}\right)$ exisitiert kein $b$ mit $b^2 = 3$.
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 7.8
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:7.8}
+Für $p \in \PZ$ und $n \in \N$ hat $\F_{p^n}$ genau $n$ Körperautomorphismen, nämlich $id_{\F_{p^n}}, f, f^2, \ldots, f^{n-1}$, wobei $f \colon \F_{p^n} \mapsto \F_{p^n}, x \mapsto x^p$, der Frobenius-Automorphismus (\autoref{bem:6.10}) von $\F_{p^n}$ ist.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Für $i \in \N_0$ ist $f^i \colon \F_{p^n} \mapsto \F_{p^n}$, $x \mapsto x^{p^i}$, ein Körperautomorphismus; dabei ist $f^n = id_{\F_{p^n}}$.\\
+Seien $i, j \in \N_0$ mit $1 \leq i \leq j < n$ und $f^i = f^j$. Dann ist $f^{j-i} = id_{\F_{p^n}}$, d.h. $x^{p^{j-i}} = x$ für alle $x \in \F_{p^n}$. Da das Polynom $X^{p^{j-i}} - X$ im Fall $j \neq i$ höchstens $p^{j-i}$ Nullstellen hat, folgt $j = i$. Daher sind $id_{\F_{p^n}}, f, f^2, \ldots, f^{n-1}$ paarweise verschieden.\\
+Andererseits existiert ein $b \in \F_{p^n}$ mit $\F_{p^n} = \left\{0, 1, b, b^2, \ldots, b^{p^n-2}\right\}$ und $b^{p^n-1} = 1$.\\
+Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, o.B.d.A. $\F_p = \PZ \subseteq \F_{p^n}$.\\
+Wegen $\F_{p^n} = \F_p(b)$ hat das Minimalpolynom $\mu$ von $b$ über $\F_p$ den Grad $n$.\\
+Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0 \ (a_i \in \F_p)$.\\
+Für jeden Körperautomorphismus $g$ von $\F_{p^n}$ gilt: $g(a) = a$ für $a \in \F_p$, und 
+\[\begin{array}{cl}
+& g(b)^n + a_{n-1}g(b)^{n-1} + \ldots + a_1g(b) + a_0\\
+= & g\left(b^n + a_{n-1}b^{n-1} + \ldots + a_1b + a_0\right)\\
+= & g\left(\underbrace{\mu(b)}_{= 0}\right) = 0
+\end{array}\]
+Daher ist $g(b)$ eine Nullstelle von $\mu$. Davon gibt es höchstens $n$ Stück. Da $g$ durch $g(b)$ eindeutig bestimmt ist, kann es höchstens $n$ Automorphismen geben.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 7.6
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:7.6}
+Also gilt: $\mu = \left(X - b\right)\left(X - b^p\right) \ldots \left(X - b^{p^{n-1}}\right)$
+\end{bem}
+
+
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+% Kapitel 8
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+\chapter{Polynome und Codes}
+
+\begin{itemize}
+	\item Ziel der Codierungstheorie:
+	\begin{itemize}
+		\item sichere Datenübertragung und -speicherung [Funkverkehr zu Satelliten, Mobilfunk, CD, DVD, ... ]
+		\item automatische Erkennung und Korrektur von Übertragungsfehlern [Rauschen, Staub, Kratzer, Materialfehler, ...]
+	\end{itemize}
+	\item durch geeignete Codierung und Decodierung:
+	\[\begin{array}{ccccccccc}
+\text{Nachricht} & \rightarrow & \text{Codierer} & \rightarrow & \text{Kanal} & \rightarrow & \text{Decodierer} & \rightarrow & \text{Nachricht}\\
+& & & & \uparrow & & & &\\
+& & & & \text{Rauschen} & & & &
+\end{array}\]
+\end{itemize}
+
+Dabei:
+\begin{itemize}
+	\item Nachricht = Vektor in $K^k$ $\left(K \text{ endlicher Körper, } \left|K\right| = q\right)$ [oft $K = \F_2$, aber: bei CD, DVD: $K = \F_256$]
+	\item Codierung: injektive Abbildung\\
+	$\underbrace{E}_{\text{Encode}} \colon K^k \mapsto K^n \ \left(n > k\right)$  [oft: $E$ linear]
+	\item Decodierung: $D \colon K^n \mapsto K^k$ mit $D \circ E = id_{K^k}$
+	\item Hilfreich \addindex{Hamming--Abstand} \randbem{Hamming: Pionier der Codierungstheorie} $d \colon K^n \times K^n \mapsto \R$ \randbem{$d$ Metrik}
+	\[d\left(x, y\right) := \left|\left\{i \colon 1 \leq i \leq n, x_i \neq y_i\right\}\right| \text{ für } x = \left(x_1, \ldots, x_n\right), \left(y_1, \ldots, y_n\right) \in K^n\] misst Anzahl der Fehler:
+	\begin{itemize}
+		\item $d\left(x, y\right) \geq 0$, $d\left(x, y\right) = 0 \Leftrightarrow x = y$
+		\item $d\left(x, y\right) = d\left(y, x\right)$
+		\item $d\left(x, z\right) \leq d\left(x, y\right) + d\left(y, z\right)$ (Dreiecksungleichung)
+	\end{itemize}
+	\item \addindex{Hamming--Gewicht}: $w \colon K^n \mapsto \R$,
+	\[w(x) = \left|\left\{i \colon 1 \leq i \leq n, x_i \neq 0\right\}\right| \text{ für } x = \left(x_1, \ldots, x_n\right) \in K^n\]
+	Dann: $d\left(x, y\right) = w\left(x - y\right)$
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%
+% Definition 8.1
+%%%%%%%%%%%%%%%%%%%
+\begin{defi}{defi:8.1}
+Ein (linearer) Code der Länge $n$ ist ein Untervektorraum $C \subseteq K^n$. Man nennt $k := \dim C$ die Dimension von $C$. Außerdem heißt
+\[\delta := \min{\left\{d\left(x, y\right) \colon x, y \in C, x \neq y\right\}} = \min{\left\{w(z) \colon 0 \neq z \in C\right\}}\]
+\addindex{Minimalabstand} (\addindex{Minimalgewicht}) von $C$. Man spricht dann auch von einem $\left[n, k, \delta\right]$--Code.
+\end{defi}
+
+\emph{Idee:} $C$ ist das Bild von $E \colon K^k \mapsto K^n$. Ist $e \in E$ mit $2e < \delta$ so kann $C$ mindestens $e$ Fehler korrigieren. (Kreise von Radius $e$ um Codewörter schneiden sich nicht.)
+
+Ein "`guter"' Code hat folgende Eigenschaften:
+\begin{itemize}
+	\item großer Minimalabstand ($\Rightarrow$ gute Korrekturmöglichkeit)
+	\item $\underbrace{\text{große Dimension}}_{\text{möglichst viele Codewörter in } C}$ ($\Rightarrow$ kostengünstig, effizient)
+\end{itemize}
+Beide Ziele liegen in verschiedenen Richtungen (Kompromisse!).
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 8.1
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:8.1}
+Viele \randbem{Vorteil dieser Konstruktion, zu Codes als Untervektorraum: man muss nur $\varphi$ und $n$ speichern, keine Basis eines Untervektorraumes mit $k$ Elementen} in der Praxis auftretende Codes werden mit Hilfe von Polynomringen konstruiert. Dabei identifiziert man $K^n$ mit $K[X] / \left(X^n - 1\right)$ durch \[\left(a_0, a_1, \ldots, a_{n-1}\right) \leftrightarrow a_0 + a_1X + a_2X^2 + \ldots + a_{n-1}X^{n-1} + \left(X^n - 1\right)\]
+Für jeden Teiler $\varphi$ von $X^n - 1$ gilt: $\left(X^n - 1\right) \subseteq \left(\varphi\right)$.\\
+Daher ist $C := \left(\varphi\right) / \left(X^n - 1\right) := \left\{\alpha\varphi + \left(X^n - 1\right) \colon \alpha \in K[X]\right\}$ ein Untervektorraum von $K[X] / \left(X^n - 1\right)$. Man nennt $C$ den \addindex{Zyklischen Code} der Länge $n$ über $K$ mit \addindex{Generatorpolynom} $\varphi$.
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 8.1
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:8.1}
+Sei $C := (\varphi) / \left(X^n - 1\right)$ wie oben und $l := \deg\varphi$, also $l \leq n$. Dann gilt: $\dim C = n - l$.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+Schreibe $\varphi = a_0 + a_1X + \ldots + a_lX^l \ \left(a_0, \ldots, a_l \in K, a_l \neq 0\right)$.\\
+Dann sind 
+\[\begin{array}{rcllllll}
+\varphi + \left(X^n - 1\right) & = & a_0 & + & a_1X + & & \ldots + a_lX^l & + \left(X^n - 1\right)\\
+X\varphi + \left(X^n - 1\right) & = & & & a_0X + a_1X^2 + & & \ldots + a_lX^{l + 1} & + \left(X^n - 1\right)\\
+& \vdots \\
+X^{n - l - 1}\varphi + \left(X^n - 1\right) & = & & & & a_0X^{n - l - 1} + & \ldots + a_lX^{n - 1} & + \left(X^n - 1\right)
+\end{array}\]
+offenbar linear unabhängig in $C$.\\
+Also: $\dim C \geq n - l$.\\
+Wegen $\varphi|X^n - 1$ existiert ein $\psi \in K[X]$ mit $X^n - 1 = \varphi\psi$. Sei $\alpha \in (\varphi)$, etwas $\alpha = \beta\varphi$ mit $\beta \in K[X]$.\\
+Division mit Rest: $\beta = \kappa\psi + \rho$ mit $\deg\rho < \deg\psi = n - l$.\\
+Schreibe $\rho = r_0 + r_1X + \ldots + r_{n - l - 1}X^{n - l - 1} \ \left(r_i \in K\right)$.\\
+Dann: \[
+\begin{array}{lcl}
+\alpha + \left(X^n - 1\right) & = & \beta\varphi + \left(X^n - 1\right) = \kappa\underbrace{\varphi\psi}_{= \left(X^n - 1\right)} + \rho\varphi + \left(X^n - 1\right)\\
+& = & \rho\varphi + \left(X^n - 1\right)\\
+& = & r_0\varphi + r_1X\varphi + \ldots + r_{n - l - 1}X^{n - l - 1}\varphi + \left(X^n - 1\right)
+\end{array}\]
+Daher bilden $\varphi + \left(X^n - 1\right), X\varphi + \left(X^n - 1\right), \ldots, X^{n - l - 1}\varphi + \left(X^n - 1\right)$ eine Basis von $C$.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Beispiel 8.1
+%%%%%%%%%%%%%%%%%%%
+\begin{bsp}\label{bsp:8.1}
+\begin{enumerate}[(a)]
+	\item (\addindex{Ternärer Golay Code})\\
+	$q = 3, n = 11, \varphi = X^5 + X^4 - X^3 + X^2 - 1 \in \F_3[X], C := (\varphi) / \left(X^{11} - 1\right)$. [Man kann zeigen, dass $\varphi$ ein irreduzibler Teiler von $X^{11} - 1$ ist.]\\
+	Dann hat $C$ Länge $n = 11$ und Diemension $k = 6$.\\
+	Indem \randbem{Minimalgewicht bei Polynomen: Anzahl von $0$ verschiedenen Koeffizienten.} man die $3^6 = 729$ Codewörter berechnet (Computer!), sieht man, dass $C$ das Minimalgewicht $\delta = 5$ hat. (Das geht auch mit etwas Theorie.)\\
+	Daher schneiden sich Kreise mit Radius $2$ um Codewörter nicht. Jeder Kreis enthält: 
+	\[1 + \underbrace{11 \cdot 2}_{\text{Vektoren mit Abstand } 1} + \underbrace{\binom{11}{2} \cdot 4}_{\text{Abstand } 2} = 243 = 3^5\]
+	Vektoren. \randbem{Code kann 2 Fehler korrigieren.} Daher enthalten die Kreise vom Radius $2$ umd die $3^6$ Codewörter, insgesamt genau $3^6 \cdot 3^5 = 3^{11}$ verschiedene Vektoren, überdecken also ganz $\F_3^{11}$. Man spricht von einem \addindex{Perfekten Code}.
+	\item (\addindex{Binärer Golay Code})\\
+	$q = 2, n = 23, \varphi := X^{11} + X^{10} + X^6 + X^5 + X^4 + X^2 + 1 \in \F_2[X], C := (\varphi) / \left(X^n - 1\right)$. [Man kann zeigen, dass $\varphi$ ein irreduzibler Teiler von $X^{23} - 1$ ist.]\\
+	Dann hat $C$ Länge $n = 23$ und Dimension $k = 12$.\\
+	Indem man die $2^{12} = 4096$ Codewörter ausrechnet (Computer!), sieht man, dass $C$ Minimalgewicht $\delta = 7$ hat. (Das geht auch mit etwas Theorie.)\\
+	Daher schneiden sich Kreise vom Radius $3$ um Codewörter nicht. Jeder Kreise enthält:
+	\[1 + 23 + \binom{23}{2} + \binom{23}{3} = 2048 = 2^{11}\]
+	Vektoren. Diese $2^{12}$ Kreise enthalten insgesamt $2^{12} \cdot 2^{11} = 2^{23}$ Vektoren, überdecken ganz $\F_2^{23}$. Man spricht wieder von einem perfekten Code.
+\end{enumerate}
+\end{bsp}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 8.2
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}\label{bem:8.2}
+Die Golay-Codes sind sowohl für die Theorie als auch für die Praxis von großer Bedeutung. Man kann zeigen, dass sie im wesentlichen die beiden einzigen perfekten Codes sind, die mehr als einen Fehler korrigieren können.
+\end{bem}
+
+
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+% Kapitel 9
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+\chapter{Konstruktionen mit Zirkel und Lineal}
+
+%%%%%%%%%%%%%%%%%%%
+% Bemerkung 9.1
+%%%%%%%%%%%%%%%%%%%
+\begin{bem}[Klassische Konstruktionsprobleme]\label{bem:9.1}
+\begin{enumerate}[(i)]
+	\item Quadratur des Kreises\\
+	Zu einem vorgegebenen Kreis konstruiere man (nur mit Zirkel und Lineal) ein Quadrat mit dem gleichen Flächeninhalt.
+	\item Rektifikation des Kreises\\
+	Zu einem vorgegebenen Kreis konstruiere man eine Strecke deren Länge genau der Umfang des Kreises ist.
+	\item Delisches Problem\footnote{Name kommt von griechischer Insel Delos}\\
+	Zu einem gegebenen Würfel konstruiere man einen Würfel mit doppeltem Volumen.
+	\item Winkeldreiteilung\\
+	Man gebe ein Verfahren an, mit dem man beliebige Winkel in 3 gleiche Teile teilen kann.
+	\item Konstruktion regelmäßiger n--Ecke\\
+	Für $n = 3, 4, 5, 6, \ldots$ konstruiere man nur mit Zikel und Lineal ein regelmäßiges n--Eck.
+\end{enumerate}
+\end{bem}
+
+%%%%%%%%%%%%%%%%%%%
+% Definition 9.1
+%%%%%%%%%%%%%%%%%%%
+\begin{defi}\label{defi:9.1}
+Gegeben sei eine Teilmenge $M = M_0 \subseteq \R^2 = \C$ mit $0, 1 \in M$.\\
+Dann sei $\mathcal{G}(M)$ die \addindex{Menge aller Geraden}, die durch mindestens zwei Punkte in $M$ gehen, und $\mathcal{K}(M)$ die \addindex{Menge aller Kreise}, deren Mittelpunkt in $M$ liegt und deren Radius gleich dem Abstand von zwei Punkten in $M$\randbem{Es muss kein Punkt auf der Peripherie liegen.} ist.\\
+Für $i \in \N$ sei $M_i$ die Menge, die aus den Elementen in $M_{i-1}$ und den Schnittpunkten von zwei verschiedenen Geraden in $\mathcal{G}(M_{i-1})$, den Schnittpunkten von zwei verschiedenen Kreisen in $\mathcal{K}(M_{i-1})$ und den Schnittpunkten einer Geraden in $\mathcal{G}(M_{i-1})$ mit einem Kreis in $\mathcal{K}(M_{i-1})$ besteht.\\
+Die Punkte in $M_{\infty} := \bigcup\limits_{i = 0}^{\infty}M_i$ heißen dann \addindex{Konstruierbar}.
+\end{defi}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 9.1
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:9.1}
+Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein Teilkörper von $\C$, der mit einer komplexen Zahl $z$ auch $\overline{z}$ und jede Quadratwurzel aus $z$ enthält\randbem{D.h. $M_{\infty}$ abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ \ }$}.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+\begin{enumerate}[(i)]
+	\begin{multicols}{2}
+	\item $\operatorname{i} := \sqrt{-1} \in M_{\infty}$:\\
+	\InitGraph{3}{3}{1.5}{1.5}{1cm}
+	\Axes
+	\UserLine[2](3, 0){i}
+	\UserLine[3](3, 3){}
+	\UserLine[4](3, 3){}
+	\Coordinates(1,1)(1,1)
+	\SetDashed
+	\CircleAt(0, 0)(1)
+	\SetNormal
+	\RightAngleAt(0, 0)(0)
+	\CloseGraph
+	
+	\item $Z \in M_{\infty} \Rightarrow \overline{z}, -z \in M_{\infty}$:\\
+	\InitGraph{4}{3}{2}{1.5}{1cm}
+	\Axes
+	\BigPointAt(1.5, 1)
+	\BigPointAt(-1.5, -1)
+	\BigPointAt(1.5, -1)
+	\LineAt(-1.5, -1, 1.5, 1)
+	\LineAt(0, 0, 1.5, -1)
+	\RightAngleAt(1.5, 0)(90)
+	\SetDashed
+	\LineAt(1.5, 1, 1.5, -1)
+	\SetNormal
+	\TextAt(1.5, 1)[r]{$z$}
+	\TextAt(1.5, -1)[r]{$\overline{z}$}
+	\TextAt(-1.5, -1)[l]{$-z$}
+	\CloseGraph
+	
+	\item $w, z \in M_{\infty} \Rightarrow w + z \in M_{\infty}$:\\
+	\InitGraph{4}{4}{0.2}{0.2}{1cm}
+	\Axes
+	\LineAt(0, 0, 1, 2)
+	\LineAt(0, 0, 2, 1)
+	\SetDashed
+	\LineAt(1, 2, 3, 3)
+	\LineAt(2, 1, 3, 3)
+	\SetNormal
+	\TextAt(1, 2)[t]{$z$}
+	\TextAt(2, 1)[b]{$w$}
+	\TextAt(3, 3)[r]{$w+z$}
+	\CloseGraph
+	
+	\item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:\\
+	\InitGraph{4}{3}{0.2}{0.2}{1cm}
+	\Axes
+	\TextAt(0, 2)[l]{$\Im(z) \ \operatorname{i}$}
+	\TextAt(2, 0)[b]{$\Im(z)$}
+	\TextAt(3, 0)[b]{$\Re(z)$}
+	\TextAt(3, 2)[r]{$z$}
+	\MedPointAt(0, 2)
+	\MedPointAt(2, 0)
+	\MedPointAt(3, 0)
+	\MedPointAt(3, 2)
+	\RightAngleAt(3, 0)(90)
+	\RightAngleAt(0, 2)(270)
+	\SetDashed
+	\LineAt(0, 2, 3, 2)
+	\LineAt(3, 2, 3, 0)
+	\Bezier(0, 2)(1.5, 1.5)(2, 0)
+	\SetNormal
+	\CloseGraph
+	
+	\item $x, y \in M_{\infty} \cap \R \Rightarrow x + \operatorname{i}y \in M_{\infty}$:\\
+	\InitGraph{3}{3}{0.2}{0.2}{1cm}
+	\Axes
+	\MedPointAt(0, 2)
+	\MedPointAt(2, 0)
+	\TextAt(0, 2)[l]{$\operatorname{i}y$}
+	\TextAt(2, 0)[b]{$y$}
+	\TextAt(2, 2)[r]{Rest folgt nach (iii)}
+	\SetDashed
+	\Bezier(0, 2)(1.5, 1.5)(2, 0)
+	\SetNormal
+	\CloseGraph
+	
+	\item $w, z \in M_{\infty} \Rightarrow w \cdot z \in M_{\infty}$:\\
+	o.B.d.A.: $w, z \in M_{\infty} \cap \R$, $\overbrace{w}^{\text{sonst (ii)}}, z > 0$\\
+	\InitGraph{4}{4}{0.2}{0.2}{1cm}
+	\Axes
+	\MedPointAt(0, 3)
+	\MedPointAt(0, 1)
+	\MedPointAt(3, 0)
+	\MedPointAt(1, 0)
+	\TextAt(0, 3)[l]{$x \operatorname{i}$}
+	\TextAt(0, 1)[l]{$w \operatorname{i}$}
+	\TextAt(3, 0)[b]{$z$}
+	\TextAt(1, 0)[b]{$1$}
+	\TextAt(2, 2)[r]{Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.h. $x = z \cdot w$}
+	\LineAt(-0.5, 1.5, 1.5, -0.5)
+	\SetDashed
+	\LineAt(-0.5, 3.5, 3.5, -0.5)
+	\SetNormal
+	\CloseGraph
+	
+	\item $z \in M_{\infty} \Rightarrow \frac{1}{z} = \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$:\\
+	o.B.d.A.: $z \in \R, z > 0$\\
+	\InitGraph{4}{4}{0.2}{0.2}{1cm}
+	\Axes
+	\MedPointAt(0, 3)
+	\MedPointAt(0, 1)
+	\MedPointAt(3, 0)
+	\MedPointAt(1, 0)
+	\TextAt(0, 3)[l]{$\operatorname{i}$}
+	\TextAt(0, 1)[l]{$x \operatorname{i}$}
+	\TextAt(3, 0)[b]{$z$}
+	\TextAt(1, 0)[b]{$1$}
+	\TextAt(2, 2)[r]{Strahlensatz: $\frac{1}{z} = \frac{x}{1}$}
+	\LineAt(-0.5, 1.5, 1.5, -0.5)
+	\SetDashed
+	\LineAt(-0.5, 3.5, 3.5, -0.5)
+	\SetNormal
+	\CloseGraph
+	
+	\item $z \in M_{\infty} \Rightarrow w := \sqrt{z} \in M_{\infty}$:\\
+	Schreibe: $z = \left|z\right|\left(\cos\varphi + \operatorname{i} \cdot \sin\varphi\right)$.\\
+	Dann: $\sqrt{z} = \sqrt{\left|z\right|}\left(\cos\frac{\varphi}{2} + \operatorname{i} \cdot \sin\frac{\varphi}{2}\right)$.\\
+	Winkelhalbierung mit Zirkel und Lineal bekanntlich möglich.\\
+	o.B.d.A.: $z \in \R, z > 0$:\\
+	Höhensatz: $x^2 = 1 \cdot z$, d.h. $x = \sqrt{z}$\\
+	\InitGraph{5}{3.5}{1.5}{1}{1cm}
+	\Axes
+	\MedPointAt(0, 1.722)
+	\MedPointAt(3, 0)
+	\MedPointAt(-1, 0)
+	\TextAt(0, 1.722)[l]{$x \ \operatorname{i}$}
+	\TextAt(3, 0)[b]{z}
+	\TextAt(-1, 0)[b]{-1}
+	\LineAt(-1, 0, 0, 1.722)
+	\LineAt(0, 1.722, 3, 0)
+	\RightAngleAt(0, 1.722)(240)
+	\SetDotted
+	\EllipticArcAt(1, 0)(2, 2)(0, 180)
+	\SetNormal
+	\CloseGraph
+	
+	\end{multicols}
+\end{enumerate}.
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 9.2
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:9.2}
+Für jeden Teilkörper $L \subseteq C$ mit $L = \overline{L} $\randbem{$L = \overline{L} \Rightarrow$ abgeschlossen gegenüber konjungiert komplex.} und $\operatorname{i} \in L$ gilt: \randbem{Zu gewissen Teil Umgekehrung von \autoref{satz:9.1}.}
+\begin{enumerate}[(i)]
+	\item Ist $z \in \C$ Schnittpunkt von zwei verschiedenen Geraden $\mathcal{G}\left(L\right)$, so ist $z \in L$
+	\item Ist $z \in \C$ Schnittpunkt einer Gerade in $\mathcal{G}\left(L\right)$ und eines Kreises in in $\mathcal{K}\left(L\right)$, so ist $z \in L\left(w\right)$ für ein $w \in \C$ mit $w^2 \in L$
+	\item Ist $z \in \C$ Schnittpunkt von zwei verschiedenen Kreisen in $\mathcal{K}\left(L\right)$, so ist $z \in L\left(w\right)$ für ein $w \in \C$ mit $w^2 \in L$
+\end{enumerate}
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+\begin{enumerate}[(i)]
+	\item Seien $a, b, c, d \in L$ mit $\left(a + \R b\right) \cap \left(c + \R d\right) = \left\{z\right\}$, d.h. $a + \lambda b = z = c + \mu d$ für geeignete $\lambda, \mu \in \R$.\\
+	Dann ist $\left(\lambda, \mu\right)$ die einzige Lösung des linearen Gleichungssystems:
+	\[\begin{array}{lcl}
+		\lambda\Re\left(b\right) - \mu\Re\left(d\right) & = & \Re\left(c - d\right)\\
+		\mu\Im\left(b\right) - \mu\Im\left(d\right) & = & \Im\left(c - a\right)
+	\end{array}\]
+	und $\left(\lambda, \mu\right)$ liegt in $L \times L$; wegen $\Re\left(b\right) = \frac{b + \overline{b}}{2}$, $\Im\left(b\right)= \frac{b + \overline{b}}{2\operatorname{i}}$, $\ldots \in L$.\\
+	Daher: $z = a + \lambda b \in L$
+	
+	\item Sei $z$ Schnittpunkt der Geraden $a + \R b$ $\left(a, b \in L\right)$ mit dem Kreis \[\left\{x + \operatorname{i}y \colon x, y \in \R, \left(x - c\right)^2 + \left(y - d\right)^2 = \rho^2\right\} \ \ \left(c, d \in L, \rho \in L\right).\]
+	Schreibe $z = a + \lambda b \ \left(\lambda \in \R\right)$. Dann:
+	\[\left(\Re\left(a\right) + \lambda\Re\left(b\right) - c\right)^2 + \left(\Im\left(a\right) + \lambda\Im\left(b\right) - d\right)^2 = \rho^2\]
+	Dies ist eine quadratische Gleichung für $\lambda$ mit Kooeffizienten in $L \cap \R$.\\
+	Ist $D$ die entsprechende Diskriminante, so ist $D \in L$ und $\lambda \in L\left(\sqrt{D}\right)$, also $z = a + \lambda b \in L\left(\sqrt{D}\right)$.
+	
+	\item Sei $z$ Schnittpunkt der Kreise mit folgenden Gleichungen:
+	\[\left(x - a_j\right)^2 + \left(y - b_j\right)^2 = g_j^2 \ \ \ \left(a_j, b_j, \rho_j \in L, j = 1, 2\right).\]
+	Subtraktion ergibt eine Gleichung der Form $\left(a_1 - a_2\right)x + \left(b_1 - b_2\right) = c, \ \left(c \in L \cap \R\right)$.
+	Da die Mittelpunkte $a_1 + \operatorname{i}b_1, a_2 + \operatorname{i}b_2$ der gegebenen Kreise verschieden sind, beschreibt diese Gleichung eine Gerade, auf der mindestens zwei Punkte aus $L$ liegen. Also folgt die Behauptung aus (ii).
+\end{enumerate}
+\end{beweis}
+
+%%%%%%%%%%%%%%%%%%%
+% Definition 9.2
+%%%%%%%%%%%%%%%%%%%
+\begin{defi}\label{defi:9.2}
+Für jede Körpererweiterung $L|K$ und jede Teilmenge $M \subseteq L$ sei $K\left(M\right)$ der Durchschnitt aller Teilkörper von $L$, die sowohl $K$ als auch $M$ enthalten.
+\end{defi}
+
+%%%%%%%%%%%%%%%%%%%
+% Satz 9.3
+%%%%%%%%%%%%%%%%%%%
+\begin{satz}\label{satz:9.3}
+Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ und jedes $z \in \C$ gilt:\\
+$z$ ist aus $m$ konstruierbar $\Leftrightarrow \exists$ Folge von Teilkörpern 
+\[\Q\left(M \cup \overline{M}\right) = L_0 \subseteq L_1 \subseteq \ldots \subseteq L_M\] von $\C$ mit $z \in L_m$ und $\left[L_n:L_{n-1}\right] = 2$ für $n = 1, \ldots, m$.
+\end{satz}
+
+%%%%%%%%%%%%%%%%%%%
+% Beweis
+%%%%%%%%%%%%%%%%%%%
+\begin{beweis}
+	\begin{itemize}
+		\item["`$\Rightarrow$"'] Die angegebene Bedingung sei erfüllt. Nach \autoref{satz:9.1} ist $\Q\left(M \cup \overline{M}\right) \subseteq M_{\infty}$. Sei also $n \in \left\{1, \ldots, m\right\}$ mit $L_{n-1} \subseteq M_{\infty}$, und sei $x \in L_n \backslash L_{n-1}$. Dann ist $L_n = L_{n-1}\left(x\right)$ und das Minimalpolynom von $x$ über $L_{n-1}$ hat die Form $\mu = X^2 + aX + b \ \left(a, b \in L_{n-1}\right)$.\\
+		Also: $\left(x + \frac{a}{2}\right)^2 = x^2 + ax + \frac{a^2}{4} = \frac{a^2}{4} - b \in L_{n-1} \subseteq M_{\infty}$, also auch $x + \frac{a}{2} \in M_{\infty}$ nach 9.1. Damit $L_n = L_{n-1}\left(x + \frac{a}{2}\right) \subseteq M_{\infty}$.\\
+		Insbesondere $z \in M_{\infty}$.
+	\end{itemize}
+\end{beweis}
+
 \appendix
 \chapter{Auflistung der Sätze}
 \theoremlisttype{optname}
